[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandbox_dev_awilson"
version = "0.0.1"
authors = [
    { name = "John Doe", email = "example@example.com" },
]
description = "A box of sand"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pytest_html",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "allure>=2.32.0"
]

[tool.hatch.version]
path = "sandbox_dev_awilson/__init__.py"

[tool.setuptools.packages]
find = { where = ["sanbox_dev_awilson"] }
